--- a/templates/yourheat/adminpages/installation_appointment_form.html
+++ b/templates/yourheat/adminpages/installation_appointment_form.html
@@ -144,16 +144,22 @@
         </div>
 
         <div class = "row">
-            <div class = "col-6">
+            <div class = "col-4">
                 <div class="form-group">
-                    <label>{{form.system_wanted.label}}</label>
-                    {{ form.system_wanted}}
-                    
+                    <label>PO Number</label>
+                    {{ form.PO_number}}          
                 </div>
             </div>
-            <div class = "col-6">
+            <div class = "col-4">
                 <div class="form-group">
-                    
+                    <label>PO Supplier</label>
+                    {{ form.PO_supplier}}
+                </div>
+            </div>
+            <div class = "col-4">
+                <div class="form-group">
+                    <label>PO Supplier Address</label>
+                    {{ form.PO_supplier_address}}
                 </div>
             </div>
         </div>
