--- a/static/css/engineer_hub.css
+++ b/static/css/engineer_hub.css
@@ -5,6 +5,7 @@
 .headers {
     background-color: orange;
     color: white;
+    text-align: left;
 }
 
 .header__img-container {
@@ -49,6 +50,29 @@
     margin-bottom: 10px;
     border: 1px solid grey;
     border-radius: 4px;
+    max-width: fit-content;
+}
+
+.form__photo-button {
+    display: block;
+    text-align: center;
+    margin: auto;
+    background-color: lightblue;
+    margin-bottom: 10px;
+    border: 1px solid grey;
+    border-radius: 4px;
+    max-width: 400px;
+}
+
+.form__back-button {
+    display: block;
+    /* text-align: center; */
+    margin: auto;
+    background-color: lightblue;
+    margin-bottom: 1px;
+    border: 1px solid grey;
+    border-radius: 4px;
+    max-width: 400px;
 }
 
 .events__container {
@@ -78,4 +102,14 @@ a {
 
 .a__unavailable {
     font-weight: 800;
+}
+
+.parts-list {
+    display:none;
+    /* visibility: hidden; */
+
+}
+
+.parts-list-show {
+    display:block;
 }
