YH Multiple further updates for Engineer Hub

--- a/templates/yourheat/adminpages/basemobile.html
+++ b/templates/yourheat/adminpages/basemobile.html
@@ -32,7 +32,7 @@
 {% endblock content %}
 
 <div class="w3-container mobile__footer">
-    <h7>©2021 Designed by Rorywork</h7>
+    <h7>©2021 Designed by KHC</h7>
 </div>
 
 </body>
