--- a/templates/yourheat/adminpages/engineer_hub.html
+++ b/templates/yourheat/adminpages/engineer_hub.html
@@ -15,14 +15,27 @@
             <div class="w3-cell form__container">
                 <label class="form__label">Set Date as <i>Available</i></label>
                 <input class="form__custom-input" type="text" name="unavailable_date" class="form-control" placeholder="DD/MM/YYYY" required="" id="id_unavailable_date">
-                <button class="btn form__custom-button boilerbtn btn-warning w3-button" type="submit">Update Calendar</button>
+                
             </div>
         </div>
 </div>
 
+<div class="w3-container events__container">
+    <div class="w3-cell-row">
+        
+        <div class="w3-cell" style="width:26%">
+        </div>
+        <div class="w3-cell" style="width:50%">
+            <button class="btn form__custom-button boilerbtn btn-warning w3-button" type="submit">Update Calendar</button>
+        </div>
+        <div class="w3-cell" style="width:24%">
+        </div>
+    </div>
+</div>
+
+
 </form>
 
-<br>
 <div class="w3-container events__container">
     <div class="w3-cell-row headers">
         <div class="w3-cell" style="width:20%">
