--- a/templates/yourheat/adminpages/engineer_hub_ok.html
+++ b/templates/yourheat/adminpages/engineer_hub_ok.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<button class="btn form__back-button w3-button" onclick="goBack2()">Photo(s) Uploaded <i class="fas fa-arrow-circle-left"></i></button>
+<button class="btn form__back-button w3-button" onclick="goBack2()">{{ button_message }} Uploaded <i class="fas fa-arrow-circle-left"></i></button>
 <br>
 
 {% endblock %}
