--- a/static/css/engineer_hub.css
+++ b/static/css/engineer_hub.css
@@ -45,12 +45,15 @@
 .form__custom-button {
     display: block;
     text-align: center;
-    margin: auto;
+    /* margin: auto; */
     background-color: lightblue;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     border: 1px solid grey;
     border-radius: 4px;
-    max-width: fit-content;
+    /* max-width: fit-content; */
+    width:200px;
+    padding:10px;
+    margin-right: 5px;
 }
 
 .form__photo-button {
@@ -113,3 +116,19 @@ a {
 .parts-list-show {
     display:block;
 }
+
+.photo__container{
+    margin: 10px;
+    max-width: 500px;
+}
+
+.photo__img {
+    max-width: 100%;
+    height: auto;
+}
+
+.button_container {
+    padding:5px;
+    display:flex;
+}
+
