--- a/templates/yourheat/adminpages/engineer_hub_get_ss_attachments.html
+++ b/templates/yourheat/adminpages/engineer_hub_get_ss_attachments.html
@@ -1,45 +1,41 @@
 {% extends "yourheat/adminpages/basemobile.html" %}
 
-
 {% block content %}
-
-<h4 class="engineer__heading">Job Photos</h4>
-
-<form method="post" enctype="multipart/form-data"> {% csrf_token %}
 
 <div class="w3-container events__container">
     <div class="w3-cell-row headers">
         <div class="w3-cell" style="width:100%">
-           Photos: {{ upload_type }}
+            View Photos: 
         </div>
     </div>
 </div>
 
-<div class="w3-container events__container">
-    <div class="w3-cell-row">
-        <div class="w3-cell" style="width:100%">
-            {{ form.engineer_photos }}
+
+<div>
+    {% for photo in photos %}
+    <div>
+        <div class="photo__container">
+            <img class = "photo__img" src="{{ photo.url }}">
         </div>
     </div>
-</div>
 
-<br>
+    {% empty %}
+        <p>No photos</p>
+    {% endfor %}    
+</div>
+ 
 
 <div class="w3-container events__container">
     <div class="w3-cell-row">
         <div class="w3-cell" style="width:5%">
             <button class="btn form__back-button w3-button" onclick="goBack()"><i class="fas fa-arrow-circle-left"></i></button>
         </div>
-        <div class="w3-cell" style="width:90%">
-            <button class="w3-button form__custom-button" type="submit">Upload to Your Heat</button>
-        </div>
-        <div class="w3-cell" style="width:5%">
-            
+        <div class="w3-cell" style="width:95%">
+
         </div>
     </div>
 </div>
 
-</form>
 
 
 {% endblock %}
