--- a/templates/yourheat/adminpages/engineer_hub_photo_select.html
+++ b/templates/yourheat/adminpages/engineer_hub_photo_select.html
@@ -15,15 +15,15 @@
 <div class="w3-container events__container">
     <div class="w3-cell-row">
         <div class="w3-cell" style="width:100%">
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Serial_Numbers\{{ engineer_name }}\" class="w3-button form__photo-button">Serial Numbers</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Benchmark\{{ engineer_name }}\" class="w3-button form__photo-button">Benchmark</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Boiler_Image\{{ engineer_name }}\" class="w3-button form__photo-button">Image of boiler (stood around 2m back)</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Flue\{{ engineer_name }}\" class="w3-button form__photo-button">Flue inside and out</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Airing_Cupboard\{{ engineer_name }}\" class="w3-button form__photo-button">Airing cupboard (with all controls in shot)</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Condense_Run_And_Termination\{{ engineer_name }}\" class="w3-button form__photo-button">Condense run and termination</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Requiring_Further_Quote\{{ engineer_name }}\" class="w3-button form__photo-button">Requiring a further quote</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Damage\{{ engineer_name }}\" class="w3-button form__photo-button">Any Damage</a>
-            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Anything_Else\{{ engineer_name }}\" class="w3-button form__photo-button">Anything Else</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Serial_Numbers\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Serial Numbers</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Benchmark\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Benchmark</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Boiler_Image\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Image of boiler (stood around 2m back)</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Flue\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Flue inside and out</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Airing_Cupboard\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Airing cupboard (with all controls in shot)</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Condense_Run_And_Termination\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Condense run and termination</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Requiring_Further_Quote\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Requiring a further quote</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Damage\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Any Damage</a>
+            <a href="\EngineerHubPhotoUpload\{{ customer_id }}\Install_Anything_Else\{{ engineer_name }}\Photo(s)\" class="w3-button form__photo-button">Anything Else</a>
         </div>
     </div>
 </div>
