--- a/templates/pdf/user_yourheatx/customer_comms/Invoice Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Invoice Comms.html
@@ -102,6 +102,15 @@
 </head>
 
 <body>
+
+<!-- Layout Header Snippet to limit email width to 800px  -->
+<table cellpadding="0" cellspacing="0" border="0" style="padding:0px;margin:0px;width:100%;">
+<tr><td colspan="3" style="padding:0px;margin:0px;font-size:20px;height:20px;" height="20">&nbsp;</td></tr>
+<tr>
+<td style="padding:0px;margin:0px;">&nbsp;</td>
+<td style="padding:0px;margin:0px;" width="800">
+<!-- End of Layout Header Snippet  -->
+
     <div class="email_header">
         <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_invoice.png' alt="Your Heat Header"/>
     </div>
@@ -161,6 +170,14 @@
                     Conditions</a></p>
         </div>
     </div>
+
+<!-- Layout Footer Snippet to limit email width to 800px  -->
+</td>
+<td style="padding:0px;margin:0px;">&nbsp;</td>
+</tr>
+<tr><td colspan="3" style="padding:0px;margin:0px;font-size:20px;height:20px;" height="20">&nbsp;</td></tr>
+</table>
+<!-- End of Layout Footer Snippet  -->
 
 </body>
 
