--- a/static/css/engineer_hub.css
+++ b/static/css/engineer_hub.css
@@ -132,3 +132,18 @@ a {
     display:flex;
 }
 
+input[type='checkbox'] {
+    -webkit-appearance:none;
+    width:30px;
+    height:30px;
+    background:white;
+    border-radius:5px;
+    border:2px solid #555;
+}
+input[type='checkbox']:checked {
+    background: rgb(0, 146, 0);
+}
+
+.checkbox-label {
+    vertical-align:top;
+}
