--- a/templates/yourheat/adminpages/installation_appointment_form.html
+++ b/templates/yourheat/adminpages/installation_appointment_form.html
@@ -185,8 +185,12 @@
         <!-- Hidden Field for Parts List  -->
          {{ form.parts_list }}
          <br>
-         
-        <button class="btn boilerbtn btn-warning" type="submit">Generate Appointment</button>
+        
+         {% if form.agreed_boiler_option.value != 'Option A Parts' and form.agreed_boiler_option.value != 'Option B Parts'  %}
+            <p style="color:red;"><b>Agreed Boiler Option has not been set in Smartsheet. Please fix before proceeding</b></p>
+        {% else %}
+            <button class="btn boilerbtn btn-warning" type="submit">Generate Appointment</button>
+        {% endif %}
 
         <a href="{% url 'ProcessingCancelled' %}" class="btn btn-secondary">Cancel</a>
 
