YH Update to Invoice Comms text

--- a/templates/pdf/user_yourheatx/customer_comms/Invoice Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Invoice Comms.html
@@ -132,15 +132,25 @@
             <!-- Insert Email body content here  -->
 
                 <p class="all_text">
-                    Thank you for choosing Your Heat. Please find attached a copy of your Deposit Invoice which is payable by return.
+                    Thank you for choosing Your Heat as your selected installer for your new {{brand}} boiler.
+                </p>
+                <p class="all_text">      
+                    Please find attached the information required for your deposit payment, we can take this via Credit/Debit card including AMEX,
+                    simply by contacting a member of the team here on <a href="tel:01732622990"><b>01732 622990</b></a>.
                 </p>
                 <p class="all_text">
-                    If you have any questions regarding the invoice, please feel free to contact the office directly on <a
-                    href="tel:01732622990"><b>01732 622990</b></a> or email <a href='mailto:info@yourheat.co.uk'><b>info@yourheat.co.uk</b></a> for any additional support.
+                    Alternatively you can send this direct via a bank transfer, please send to:
+                </p>
+                <p class="all_text">
+                    Account Name: <b>Your Heat Ltd</b><br>
+                    Account Number: <b>54576261</b><br>
+                    Sort Code: <b>60-60-08</b><br>
+                    Reference: <b>{{smartsheet_id}}</b>
                 </p>
 
+
             <p class="all_text">
-                For more information about us, please visit <a href='https://yourheat.co.uk/'><b>www.yourheat.co.uk</b></a>    
+                We’re just getting things ready here, once we have received your payment, we will send over your receipt and your confirmation.
             </p>
 
             <p class="all_text">
