--- a/templates/pdf/user_yourheatx/customer_comms/Our Priority Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Our Priority Comms.html
@@ -109,6 +109,7 @@
 <td style="padding:0px;margin:0px;">&nbsp;</td>
 <td style="padding:0px;margin:0px;" width="800">
 <!-- End of Layout Header Snippet  -->
+
     <div class="email_header">
         <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_about_your_boiler_quotation.png' alt="Your Heat Header"/>
     </div>
@@ -130,8 +131,14 @@
             <!-- Insert Email body content here  -->
 
             <p class="all_text">
-                We tried calling today to discuss the quotation we gave on {{ survey_date|date:"D j F Y" }}. We'd like to know if you had any questions relating to the quotation, or if there was anything further we could do to support you at this stage as we'd love to have you on board as a customer.
-                If you'd like to arrange a convenient time for us to give you a call, simply reply to this email and one of our team will be happy to schedule a call.
+                We've been trying to contact you to discuss the quotation we gave you recently. We'd love to know if there was anything further
+                we could do to support the quotation we provided however we appreciate you may not be ready to make a decision 
+                about the installation, so we'll wait for you to contact us if you do want to talk.
+            </p>
+            
+            <p class="all_text">
+                If you'd like to arrange a convenient time for us to give you a call in the future,
+                simply reply to this email and one of our team will be happy to schedule a call.
             </p>
             
             <p class="all_text">
@@ -173,7 +180,7 @@
 <tr><td colspan="3" style="padding:0px;margin:0px;font-size:20px;height:20px;" height="20">&nbsp;</td></tr>
 </table>
 <!-- End of Layout Footer Snippet  -->
-</body>
 
+</body>
 
 </html>
