--- a/templates/pdf/user_yourheatx/customer_comms/Balance Invoice Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Balance Invoice Comms.html
@@ -132,10 +132,10 @@
             <!-- Insert Email body content here  -->
 
                 <p class="all_text">
-                    Thank you for choosing Your Heat as your selected installer for your new {{brand}} boiler.
+                    Thank you again for choosing Your Heat as your selected installer for your new {{brand}} boiler.
                 </p>
                 <p class="all_text">      
-                    Please find attached the information required for your deposit payment, we can take this via Credit/Debit card including AMEX,
+                    Please find attached the information required for your balance payment, we can take this via Credit/Debit card including AMEX,
                     simply by contacting a member of the team here on <a href="tel:01732622990"><b>01732 622990</b></a>.
                 </p>
                 <p class="all_text">
@@ -150,7 +150,7 @@
 
 
             <p class="all_text">
-                We’re just getting things ready here, once we have received your payment, we will send over your receipt and your confirmation.
+                We’re just getting things ready here, once we have received your payment, we will send over your receipt, your confirmation, along with what to expect before and during your installation with us.
             </p>
 
             <p class="all_text">
